--- a/GEL_CAPTAN/TOP_LEVEL_summary.html
+++ b/GEL_CAPTAN/TOP_LEVEL_summary.html
@@ -2,18 +2,18 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>TOP_LEVEL Project Status (09/23/2016 - 14:45:22)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>TOP_LEVEL Project Status (09/30/2016 - 12:12:07)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>dig_mac.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
-<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/pn_parser.xmsgs?&DataKey=Error'>1 Error</A></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>TOP_LEVEL</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Programming File Generated</TD>
+<TD>Synthesized</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
@@ -25,22 +25,20 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/*.xmsgs?&DataKey=Warning'>700 Warnings (668 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/*.xmsgs?&DataKey=Warning'>273 Warnings (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
 <TD>Balanced</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Routing Results:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.unroutes'>All Signals Completely Routed</A></TD>
+&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
 <TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
-<TD>
-<font color="red"; face="Arial"><b>X </b></font>
-<A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.ptwx?&DataKey=ConstraintsData'>1 Failing Constraint</A></TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
@@ -49,175 +47,56 @@ No Errors</TD>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>12 &nbsp;<A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
+<TD>&nbsp;&nbsp;</TD>
 </TR>
 </TABLE>
 
 
 
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
-<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='5'><B>Device Utilization Summary</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DeviceUtilizationSummary"><B>[-]</B></a></TD></TR>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='4'><B>Device Utilization Summary (estimated values)</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DeviceUtilizationSummary(estimatedvalues)"><B>[-]</B></a></TD></TR>
 <TR ALIGN=CENTER BGCOLOR='#FFFF99'>
-<TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
+<TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD COLSPAN='2'><B>Utilization</B></TD></TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slices</TD>
+<TD ALIGN=RIGHT>3037</TD>
+<TD ALIGN=RIGHT>10752</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>28%</TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number Slice Registers</TD>
-<TD ALIGN=RIGHT>3,082</TD>
-<TD ALIGN=RIGHT>21,504</TD>
-<TD ALIGN=RIGHT>14%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>3,081</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Latches</TD>
-<TD ALIGN=RIGHT>1</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Flip Flops</TD>
+<TD ALIGN=RIGHT>2268</TD>
+<TD ALIGN=RIGHT>21504</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>10%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>4,954</TD>
-<TD ALIGN=RIGHT>21,504</TD>
-<TD ALIGN=RIGHT>23%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
+<TD ALIGN=RIGHT>4696</TD>
+<TD ALIGN=RIGHT>21504</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>21%</TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>3,898</TD>
-<TD ALIGN=RIGHT>10,752</TD>
-<TD ALIGN=RIGHT>36%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing only related logic</TD>
-<TD ALIGN=RIGHT>3,898</TD>
-<TD ALIGN=RIGHT>3,898</TD>
-<TD ALIGN=RIGHT>100%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing unrelated logic</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>3,898</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>5,227</TD>
-<TD ALIGN=RIGHT>21,504</TD>
-<TD ALIGN=RIGHT>24%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>4,253</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as a route-thru</TD>
-<TD ALIGN=RIGHT>273</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used for Dual Port RAMs</TD>
-<TD ALIGN=RIGHT>384</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Shift registers</TD>
-<TD ALIGN=RIGHT>317</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
-<TD ALIGN=RIGHT>79</TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded IOBs</TD>
+<TD ALIGN=RIGHT>81</TD>
 <TD ALIGN=RIGHT>448</TD>
-<TD ALIGN=RIGHT>17%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFG/BUFGCTRLs</TD>
-<TD ALIGN=RIGHT>12</TD>
-<TD ALIGN=RIGHT>32</TD>
-<TD ALIGN=RIGHT>37%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as BUFGs</TD>
-<TD ALIGN=RIGHT>12</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>18%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of FIFO16/RAMB16s</TD>
-<TD ALIGN=RIGHT>30</TD>
+<TD ALIGN=RIGHT>11</TD>
 <TD ALIGN=RIGHT>72</TD>
-<TD ALIGN=RIGHT>41%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>15%</TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as RAMB16s</TD>
-<TD ALIGN=RIGHT>30</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of GCLKs</TD>
+<TD ALIGN=RIGHT>12</TD>
+<TD ALIGN=RIGHT>32</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>37%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of DCM_ADVs</TD>
 <TD ALIGN=RIGHT>5</TD>
 <TD ALIGN=RIGHT>8</TD>
-<TD ALIGN=RIGHT>62%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BSCAN_VIRTEX4s</TD>
-<TD ALIGN=RIGHT>1</TD>
-<TD ALIGN=RIGHT>4</TD>
-<TD ALIGN=RIGHT>25%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of IDELAYCTRLs</TD>
-<TD ALIGN=RIGHT>1</TD>
-<TD ALIGN=RIGHT>16</TD>
-<TD ALIGN=RIGHT>6%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of RPM macros</TD>
-<TD ALIGN=RIGHT>12</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>3.42</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>62%</TD>
 </TR>
 </TABLE>
 
 
 
-&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
-<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='4'><B>Performance Summary</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=PerformanceSummary"><B>[-]</B></a></TD></TR>
-<TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
-<TD>12 (Setup: 12, Hold: 0, Component Switching Limit: 0)</TD>
-<TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
-</TR>
-<TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Routing Results:</B></TD><TD>
-<A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.unroutes'>All Signals Completely Routed</A></TD>
-<TD BGCOLOR='#FFFF99'><B>Clock Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
-</TR>
-<TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Timing Constraints:</B></TD>
-<TD>
-<font color="red"; face="Arial"><b>X </b></font>
-<A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.ptwx?&DataKey=ConstraintsData'>1 Failing Constraint</A></TD>
-<TD BGCOLOR='#FFFF99'><B>&nbsp;</B></TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TABLE>
+
 
 
 
@@ -225,20 +104,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Sep 23 14:39:26 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Warning'>273 Warnings (273 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Info'>129 Infos (129 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.bld'>Translation Report</A></TD><TD>Current</TD><TD>Fri Sep 23 14:42:42 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>71 Warnings (39 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>69 Infos (69 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Fri Sep 23 14:43:38 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Warning'>119 Warnings (119 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Info'>9 Infos (9 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Fri Sep 23 14:44:34 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Warning'>120 Warnings (120 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Info'>1 Info (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Sep 30 12:12:00 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Warning'>273 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Info'>129 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.bld'>Translation Report</A></TD><TD>Out of Date</TD><TD>Fri Sep 23 14:42:42 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>71 Warnings (39 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>69 Infos (69 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL_map.mrp'>Map Report</A></TD><TD>Out of Date</TD><TD>Fri Sep 23 14:43:38 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Warning'>119 Warnings (119 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Info'>9 Infos (9 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.par'>Place and Route Report</A></TD><TD>Out of Date</TD><TD>Fri Sep 23 14:44:34 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Warning'>120 Warnings (120 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Info'>1 Info (1 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Fri Sep 23 14:44:47 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Fri Sep 23 14:45:16 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>117 Warnings (117 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>Fri Sep 23 14:44:47 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>Fri Sep 23 14:45:16 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>117 Warnings (117 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Sep 30 11:11:58 2016</TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Sep 23 14:45:17 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/23/2016 - 17:09:21</center>
+<br><center><b>Date Generated:</b> 09/30/2016 - 12:12:07</center>
 </BODY></HTML>
